syntax = "proto3";

package prime;

option java_package = "com.proto.prime";
option java_multiple_files = true;

message PrimeCompositionRequest {
  int32 composite = 1;
}

message PrimeCompositionResponse {
  int32 prime_factor = 1;
}

message MaximumInStreamRequest {
  int32 number = 1;
}

message MaximumInStreamResponse {
  int32 max_number = 1;
}

service PrimeCompositionService {
  rpc PrimeComposition(PrimeCompositionRequest) returns (stream PrimeCompositionResponse) {};

  rpc MaximumInStream(stream MaximumInStreamRequest) returns (stream MaximumInStreamResponse) {};
}